[project]
name = "raynoid"
version = "0.1.0"
description = "Silly game"
authors = [
    {name = "Daniel Vazquez",email = "danlestal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "raylib (>=5.5.0.3,<6.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
polyfactory = "^2.22.2"

